artifacts/allow_netpol_same_ns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    appName: act-bot
    name: act-bot
    deploymentconfig: act-bot
  name: act-bot-equator-default-performance-allow
  namespace: equator-default-performance
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: openshift-project
          operator: In
          values:
          - equator-default-performance
      # podSelector:
      #   matchExpressions:
      #   - key: appName
      #     operator: In
      #     values:
      #     - "agent"
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      name: act-bot
